--- a/branding/pdf/entities.adoc
+++ b/branding/pdf/entities.adoc
@@ -8,11 +8,14 @@
 :x86: x86
 :x86_64: x86_64
 :centos: CentOS
+:redhat: Red Hat
 :rhel: Red Hat Enterprise Linux
 :rhela: RHEL
 :rhnminrelease6: Red Hat Enterprise Linux Server 6
 :rhnminrelease7: Red Hat Enterprise Linux Server 7
 :ubuntu: Ubuntu
+:opensuse: openSUSE
+:centos: CentOS
 :kickstart: Kickstart
 :productname:
 :productproxy: {productname} Proxy
@@ -47,7 +50,6 @@
 :rootuser: root
 :ruser: root
 :mdash: -
-:rhela: RHEL
 :mgradvtop: Advanced Topics Guide
 :mgrgetstart: Getting Started Guide
 :mgrrefguide: Reference Guide
