--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -7,7 +7,7 @@ This section contains information about registering traditional and Salt clients
 
 [WARNING]
 ====
-{slesesa} clients are also called sometimes SLESES, RES or {redhat} {slesa})
+{slesesa} clients are also called sometimes SLESES, RES or {redhat} {slesesa})
 For {rhel} based clients tou are responsible for arranging access to {rhela} or {centos} base media repositories installation media.
 ifeval::[{suma-content} == true]
 You must obtain support from {suse} for all your {slesesa} systems.
@@ -40,16 +40,19 @@ systemctl restart taskomatic
 ====
 Missing packages will cause your registration to fail.
 For {slesesa} clients, some required packages are contained on the {rhel} installation media or the {centos} installation media.
-Ensure you follow the whole procedure before trying to register any {slesa} client
+Ensure you follow the whole procedure before trying to register any {slesesa} client
 ====
 
 === Add {slesesa} product from SCC
 
 The {slesesa} product is provided by {scc}, including the client tools.
 
+[IMPORTANT]
+====
 Because the {slesesa} channels are particularly large, it can take up to 24 hours for an initial channel synchronization to complete.
 When you have completed the initial synchronization, we recommended you clone the channel before working with it.
 This provides you with a backup of the original synchronization data.
+====
 
 Before you register {slesesa} clients to your {productname} Server, check that you have the corresponding {slesesa} product enabled, and the required channels are fully synchronized.
 
@@ -59,13 +62,13 @@ You need to select two different sets of channels, one for {slesesa} and the oth
 * "RHEL6 Base x86_64" and "SUSE Linux Enterprise Client Tools RES6 x86_64" at the WebUI, or [systemitem]``rhel-x86_64-server-6`` and [systemitem]``res6-suse-manager-tools-x86_64`` at CLI. This adds the packages for the {slesesa} Client Tools.
 * "RHEL Expanded Support 6" at the WebUI, or [systemitem]``res6-x86_64`` at CLI. This adds the packages for the {slesesa} Operating System.
 
-// I suggest adding scripts
+// I suggest adding a screenshot
 
 {slesesa} 7::
 * "RHEL7 Base x86_64" and "SUSE Linux Enterprise Client Tools RES7 x86_64" at the WebUI, or [systemitem]``rhel-x86_64-server-7`` and [systemitem]``res7-suse-manager-tools-x86_64`` at CLI. This adds the packages for the {slesesa} Client Tools.
 * "RHEL Expanded Support 7" at the WebUI, or [systemitem]``res7-x86_64`` at CLI. This adds the packages for the {slesesa} Operating System.
 
-// I suggest adding scripts
+// I suggest adding screenshot
 
 You can synchronize the channels with [command]``mgr-sync``.
 
